istio-feature-demos/guestbook-app/ab-testing/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtual-service-guestbook
spec:
  hosts:
    - '*'
  gateways:
    - guestbook-gateway
  http:
  - route:
    - destination:
        host: guestbook
        subset: v2
  - route:
    - destination:
        host: guestbook
        subset: v1
